--- a/src/css/steps.css
+++ b/src/css/steps.css
@@ -1,7 +1,7 @@
 .featured_steps{
     display: grid;
     grid-template-columns: inherit;
-    align-items: center;
+    /* align-items: center; */
     justify-items: center;
     background: none;
    
@@ -23,15 +23,15 @@
     /* border-radius: 50%; */
     text-align: center;
     align-items: flex-end;
-    align-self: center;
+    /* align-self: center; */
     /* padding: 5px; */
-    border-bottom: 2px solid rgb(216, 216, 216) ;
+    border-bottom: 2px solid rgba(216, 216, 216, 0.767) ;
     
     
 }
 .is_active{
-    background-color: #96CB40 !important;
-    border-bottom: 2px solid #3F3F41 !important;
+    background-color: rgba(150, 203, 64, 0.76) !important;
+    border-bottom: 2px solid rgba(63, 63, 65, 0.726) !important;
     /* border-right:2px solid #3F3F41; */
     padding: 0;
    
